# toru-os

./: Cargo.toml  Makefile  README.md  build.rs
.cargo/: config.toml
disk-builder/: Cargo.toml
disk-builder/src/: lib.rs
kernel/: Cargo.toml
kernel/src/: allocator.rs  framebuffer.rs  gdt.rs  interrupts.rs  lib.rs  macros.rs  main.rs  memory.rs  serial.rs  tty.rs
kernel/src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs  mod.rs
kernel/src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs  tty.rs
kernel/tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
