[package]
name = "toru_os"
version = "0.1.0"
edition = "2024"
default-run = "toru_os"

[workspace]
members = ["kernel", "disk-builder"]

[dependencies]
ovmf-prebuilt = "0.1.0-alpha"
disk-builder = { path = "disk-builder" }

[build-dependencies]
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
disk-builder = { path = "disk-builder" }
